ii/cluster/ii-nz-temp/expo-prezzo.yaml
# Configure

apiVersion: v1
kind: Namespace
metadata:
  name: careers-expo-ii-nz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: careers-expo-ii-nz
  template:
    metadata:
      labels:
        app: careers-expo-ii-nz
        environment: production
    spec:
      automountServiceAccountToken: false
      containers:
      - name: careers-expo-ii-nz
        image: registry.gitlab.com/ii/expo-prezzo:2021.08.12.1642
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8101
        readinessProbe:
          tcpSocket:
            port: 8101
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8101
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 10
        resources:
          requests:
            memory: "400Mi"
            cpu: "1"
          limits:
            memory: "400Mi"
            cpu: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
---
apiVersion: v1
kind: Service
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  ports:
    - port: 8101
      targetPort: 8101
  selector:
    app: careers-expo-ii-nz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
  annotations:
    cert-manager.io/cluster-issuer: careers-expo-ii-nz-letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "careers-expo.ii.nz"
      secretName: careers-expo-ii-nz-letsencrypt-prod
  rules:
    - host: "careers-expo.ii.nz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: careers-expo-ii-nz
                port:
                  number: 8101
